--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yt-most-replayed",
+  "name": "@reckerp/yt-most-replayed",
   "version": "1.0.0",
   "description": "A TypeScript library to fetch YouTube's 'Most Replayed' heatmap data",
   "type": "module",
@@ -45,6 +45,9 @@
     "url": "https://github.com/reckerp/yt-most-replayed/issues"
   },
   "homepage": "https://github.com/reckerp/yt-most-replayed#readme",
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "@biomejs/biome": "^2.3.10",
     "@types/bun": "latest",
