test: add test suite for lib

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "lint": "biome lint .",
     "format": "biome format --write .",
     "check": "biome check --write .",
-    "prepublishOnly": "bun run typecheck && bun run build"
+    "test": "bun test",
+    "prepublishOnly": "bun run typecheck && bun run test && bun run build"
   },
   "keywords": [
     "youtube",
