--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,9 +11,6 @@ jobs:
     permissions:
       contents: read
       id-token: write
-    environment:
-      name: npm
-      url: https://www.npmjs.com/package/@reckerp/yt-most-replayed
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -29,14 +26,17 @@ jobs:
       - name: Type check
         run: bun run typecheck
 
+      - name: Run tests
+        run: bun run test
+
       - name: Build
         run: bun run build
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: "24"
           registry-url: "https://registry.npmjs.org"
 
-      - name: Publish to npm with provenance
-        run: npm publish --provenance --access public
+      - name: Publish to npm
+        run: npm publish
